Fix artist list sort and paged loading by changing simpleapi to return array of artists rather than a JS object which can't retain server-side sorting; also simplifies concatenation on app side; now pull exhibition name and date

--- a/www/templates/detail-artist.html
+++ b/www/templates/detail-artist.html
@@ -31,15 +31,14 @@
 					</div>
 				</div>
 				<div class='related right'>
-					<a href='artwork.html'><div class='unit'>
+					<div class='unit'>
 						<h5>Related Artworks</h5>
 						<p>It’s all about ME, Not You, 1996</p>
-					</div></a>
-					<a href='exhibition.html'><div class='unit'>
+					</div>
+					<div class='unit'>
 						<h5>Related Exhibitions</h5>
-						<p>Greer Lankton</p>
-						<p class='red'>October 19 1996 - June 29, 1997</p>
-					</div></a>
+						<div ng-bind-html='artist.exhibitions'></div>
+					</div>
 					<div class='unit'>	
 						<h5>Related Events</h5>
 						<p>ARTLab: Be Proud of Who You Are!</p>
