--- a/www/templates/tab-front.html
+++ b/www/templates/tab-front.html
@@ -5,9 +5,11 @@
 			<h1>Mattress Factory</h1>
 			<h2>Art You Can Get Into</h2>
 		</div>
-		<div id="footer" class='menuToggle'>
-			<a href="#menupanel"><img src='img/MF_logo.jpg'></a>
-		</div>
 	</div>
   </ion-content>
+  <ion-footer-bar>
+  		<div id="footer" class='menuToggle'>
+			<a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
+		</div>
+	</ion-footer-bar>  
 </ion-view>
