--- a/www/templates/detail-artist.html
+++ b/www/templates/detail-artist.html
@@ -47,6 +47,11 @@
 				</div>
 			</div>				
 		</div>
-	</div>
+	</div>	
   </ion-content>
+  <ion-footer-bar>
+  	<div id="footer" class='menuToggle'>
+		<a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
+	</div>
+  </ion-footer-bar> 
 </ion-view>
