--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,24 +1,36 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
   	  <ion-nav-bar class="bar-black">
-		<ion-nav-buttons side="left">
+		<!--<ion-nav-buttons side="left">
 			<button  class="button button-icon icon ion-navicon" menu-toggle="left"></button>
-		</ion-nav-buttons>
+		</ion-nav-buttons>-->
 
 		<ion-nav-back-button></ion-nav-back-button>
 	  </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" width="150">
+  <ion-side-menu side="left" width="300">
     <ion-content>
       <ion-list>
-        <ion-item href="#/tab/front">
-          Home    
+        <ion-item menu-close href="#/tab/onview">
+          <i class='fa fa-eye'></i> On View	
+        </ion-item>  
+        <ion-item menu-close href="#/tab/museum">
+          <i class='fa fa-building'></i> Explore the Museum	
         </ion-item>
-        <ion-item href="#/tab/artists">
-          Artists		
+        <ion-item menu-close href="#/tab/neighborhood" >
+          <i class='fa fa-map-marker'></i> Explore the Neighborhood
+        </ion-item>                      
+        <ion-item menu-close href="#/tab/artists">
+          <i class='fa fa-smile-o'></i> Artists		
         </ion-item>
+        <ion-item menu-close href="#/tab/exhibitions">
+          <i class='fa fa-image'></i> Exhibitions		
+        </ion-item>  
+        <ion-item menu-close href="#/tab/exhibitions">
+          <i class='fa fa-search'></i> Search the Archive		
+        </ion-item>               
       </ion-list>
     </ion-content>
   </ion-side-menu>
