--- a/www/templates/tab-artists.html
+++ b/www/templates/tab-artists.html
@@ -1,14 +1,23 @@
-<ion-view view-title="Artists">
+<ion-view view-title="Browse Mattress Factory Artists">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="artist in artists" type="item-text-wrap" href="#/tab/detail-artist/{{artist.entity_id}}">
+    <ion-list class='artistList'>
+    	<div class='row gallery'>
+      <ion-item class="item-remove-animate item-avatar item-icon-right col col-34" ng-repeat="artist in artists" type="item-text-wrap" href="#/tab/detail-artist/{{artist.entity_id}}">
+        <div ng-bind-html='artist.thumb'></div>
         <h2>{{artist.name}}</h2>
         <p>{{artist.nationality}}</p>
       </ion-item>
+      </div>
     </ion-list>
 	<ion-infinite-scroll
 		on-infinite="loadNextArtistPage()"
 		distance="50%">
 	</ion-infinite-scroll>
+
   </ion-content>
+  <ion-footer-bar>
+  		<div id="footer" class='menuToggle'>
+			<a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
+		</div>
+	</ion-footer-bar>		
 </ion-view>
