--- a/www/templates/tab-artists.html
+++ b/www/templates/tab-artists.html
@@ -2,11 +2,11 @@
   <ion-content>
     <ion-list class='artistList'>
     	<div class='row gallery'>
-      <ion-item class="item-remove-animate item-avatar item-icon-right col col-25" ng-repeat="artist in artists" type="item-text-wrap" href="#/tab/detail-artist/{{artist.entity_id}}">
-        <div ng-bind-html='artist.thumb'></div>
-        <h2>{{artist.name}}</h2>
-        <p>{{artist.nationality}}</p>
-      </ion-item>
+		  <ion-item class="item-remove-animate item-avatar item-icon-right col col-25" ng-repeat="artist in artists" type="item-text-wrap" href="#/tab/detail-artist/{{artist.entity_id}}">
+			<div ng-bind-html='artist.thumb' class='artistThumb'></div>
+			<h2>{{artist.name}}</h2>
+			<p>{{artist.nationality}}</p>
+		  </ion-item>
       </div>
     </ion-list>
 	<ion-infinite-scroll
