--- a/www/templates/detail-exhibition.html
+++ b/www/templates/detail-exhibition.html
@@ -10,14 +10,13 @@
 	<div id="deviceready" class="viewArea">
 		<div class='headerMain'>
 			<div class='left'>
-				<p id='artistname' class='title'>{{artist.name}}</p>
-				<p class='vitals'>{{artist.nationality}}, {{artist.vital_dates}}</p>
+				<p id='artistname' class='title'>{{exhibition.name}}</p>
 			</div>
 
 		</div>
 		<div class='contentMain'>
 			<div class='upperImages'>
-				<ion-scroll direction="x" class="artistScroller"><div ng-bind-html="artist.pics">
+				<ion-scroll direction="x" class="artistScroller"><div ng-bind-html="exhibition.thumb">
 				</div></ion-scroll>
 			</div>
 
@@ -26,7 +25,7 @@
 					<h5>Biography</h5>
 					<ion-scroll direction="y" >
 						
-							<div ng-bind-html="artist.biography"></div>	
+							<div ng-bind-html="exhibition.description"></div>	
 						
 					</ion-scroll>					
 				</div>
