--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -28,7 +28,7 @@
         <ion-item menu-close href="#/tab/exhibitions">
           <i class='fa fa-image'></i> Exhibitions		
         </ion-item>  
-        <ion-item menu-close href="#/tab/exhibitions">
+        <ion-item menu-close href="#/tab/search">
           <i class='fa fa-search'></i> Search the Archive		
         </ion-item>               
       </ion-list>
