--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,7 +25,7 @@
         <ion-item menu-close href="#/tab/artists">
           <i class='fa fa-smile-o'></i> Artists		
         </ion-item>
-        <ion-item menu-close href="#/tab/exhibitions">
+        <ion-item menu-close href="#/tab/exhibitions/2010-2019">
           <i class='fa fa-image'></i> Exhibitions		
         </ion-item>  
         <ion-item menu-close href="#/tab/search">
