--- a/www/templates/detail-artwork.html
+++ b/www/templates/detail-artwork.html
@@ -9,8 +9,9 @@
 			</div>
 		
 			<div class='upperImages'>
-				<ion-scroll direction="x" class="artistScroller"><div ng-bind-html="artwork.pics">
-				</div></ion-scroll>
+				<ion-scroll direction="x" class="artistScroller">
+					<div ng-bind-html="artwork.pics"></div>
+				</ion-scroll>
 			</div>
 
 			<div class='exLowerInfo'>
