--- a/www/css/style.css
+++ b/www/css/style.css
@@ -466,14 +466,18 @@ p.red {
 	height:620px;
 }
 .exhibitionList div.list{
-	padding-bottom:200px !important;
+	padding-bottom:300px !important;
+	padding-top:275px !important;
 }
 .exhibitionList .item {
 	border-width:0px;
     background: #000;
    	opacity:.3;
+   	height:55px;
+   	overflow:hidden;
+   	margin:0px !important;
+   	border:0px;
 }
-
 .exhibitionList .item h2 {
     color: #fff;
     font-family:proximanova;
@@ -568,6 +572,109 @@ div.artistImage {
 .item p {
 	color: #ffffff;
 }
+
+
+/* Search Results */
+
+.resultList{
+	height:620px;
+}
+.resultList div.list{
+	padding-bottom:300px !important;
+	padding-top:275px !important;
+}
+.resultList .item {
+	border-width:0px;
+    background: #000;
+   	opacity:.3;
+   	height:55px;
+   	overflow:hidden;
+   	margin:0px !important;
+   	border:0px;
+}
+
+.resultList .item h2 {
+    color: #fff;
+    font-family:proximanova;
+    font-size:20px;
+    padding-left:5px;
+    text-shadow: 0 0 1px white;
+   	color: transparent;
+}
+.resultList .item h2 .redDot{
+	display:none;
+}
+.resultList .active {
+    opacity:1 !important;
+    height:auto;
+}
+.resultList .active + ion-item{
+	opacity:.7 !important;
+}
+.resultList .active h2 {
+	color: #fff;
+	text-shadow:none;
+    font-size: 2em;
+}
+.resultList .active h2 .redDot{
+	display:inline;
+	position:absolute;
+	left:0px;
+	top:12px;
+	z-index:10;
+}
+.resultList .item .active h2 .redDot img{
+	width:10px;
+	height:auto;
+}
+.resultListInfo img{
+	max-width:100%;
+	height:auto;
+}
+.resultListInfo .date{
+	padding-top:10px;
+	padding-bottom:10px;
+}
+.resultListInfo .item, .resultListInfo .item-complex{
+	border:0px;
+	background-color:#000 !important;
+	background:none;
+}
+.resultHeading{
+	font-size: 40px;
+	font-family: proximanova;
+	line-height:1em;
+	padding-left:20px;
+}
+.resultHeading input{
+	display:inline;
+	width:75%;
+	background-color:rgba(255,255,255,.1);
+	color:#FFF;
+	font-family: proximanova;
+	padding:5px;
+}
+.resultHeading button{
+	background-color:#000;
+	display:inline;
+	border:0px;
+	color:#FFF;
+	font-size:30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* common detail styles */
 .headerMain {
 	color:#ffffff;
@@ -634,4 +741,54 @@ div.artistImage {
 .artistLowerInfo{
 	padding-top:30px;
 	padding-left:20px;
+}
+
+/* on view */
+.onViewSlide{
+	width:100%;
+	height:700px;
+	overflow:hidden;
+	position:relative;
+}
+.onViewSlide img{
+	width:100%;
+	height:auto;
+}
+.onViewSlide .exhibitionInfo{
+	position:absolute;
+	bottom:100px;
+	left:0px;
+	z-index:10;
+	width:100%;
+}
+.onViewSlide .exhibitionInfo H1{
+	background-color:red;
+	color:#FFF;
+	padding:10px 50px 10px 20px;
+	font-size:22px;
+	font-weight:normal;
+	margin:0px;
+	display:inline-block;
+	float:left;
+	clear:left;
+	font-family: proximanova;
+}
+.onViewSlide .exhibitionInfo H2, .onViewSlide .exhibitionInfo H3{
+	background-color:rgba(0,0,0,.8);
+	color:#FFF;
+	padding:5px 20px 5px 20px;
+	margin:0px;
+	float:left;
+	clear:left;
+	font-family:proximanova;
+	text-transform:uppercase;
+	font-size:30px;
+	max-width:100%;
+}
+.onViewSlide .exhibitionInfo H3{
+	text-transform:none;
+	font-size:16px;
+	font-weight:normal;
+	font-family:proximanova;
+	padding-bottom:10px;
 }
