--- a/www/templates/detail-artist.html
+++ b/www/templates/detail-artist.html
@@ -24,6 +24,10 @@
 					<div ng-bind-html="artist.biography"></div>				
 				</ion-scroll>
 				<ion-scroll direction="y" class='related col2'>
+					<div class='unit'>
+						<h5>Audio</h5>
+						<div style='margin-right:10px;'><iframe width="100%" height="70" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/268334580&amp;color=ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>
+					</div>
 					<div class='unit' ng-if='artist.artworks'>
 						<h5>Artworks</h5>
 						<div ng-bind-html="artist.artworks"></div> 
